Update PlayerPacketHandler.java